--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://webzonedvckandra.github.io/webzonesindrihomepage",
+  "homepage": "https://webzonedvckandra.github.io/webzonesindri",
   "name": "webzonesite",
   "version": "0.1.0",
   "private": true,
